[tool.poetry]
name = "{{ project_name }}"
version = "{{ package.version }}"
description = "{{ package.description }}"
readme = "README.md"
repository = "{{ package.repository }}"
authors = [ "20C <code@20c.com>",]
license = "{{ package.license }}"
classifiers = [
  "Topic :: Software Development",
  "Development Status :: {{ package.status }}",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
]

packages = [
    { include = "{{ project_name }}", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
# testing
coverage = ">=5"
pytest = ">=6"
pytest-django = ">=3.8"
pytest-cov = "*"

# linting
# bandit = ">=1.6.2"
black = ">=20"
isort = ">=5.7"
flake8 = ">=3.8"
mypy = ">=0.950"
pre-commit = ">=2.13"
pyupgrade = ">=2.19"
ruff = ">=0.1"

# docs
markdown = "*"
markdown-include = ">=0.5,<1"
mkdocs = "^1.2.3"

# ctl
ctl = ">=1"
jinja2 = ">=2"
tmpl = ">=1"
twine = ">=3"

[tool.poetry.plugins."markdown.extensions"]
pymdgen = "pymdgen.md:Extension"

[build-system]
requires = [ "poetry>=0.12",]
build-backend = "poetry.masonry.api"

[tool.isort]
profile = "black"
multi_line_output = 3

